Avoid icon wrap in Safari.

--- a/Site.css
+++ b/Site.css
@@ -80,7 +80,7 @@ nav img {
 	right: 0;
 	font: italic 100% 'Arapey', 'Georgia', serif;
 	font-weight: 600;
-	width: 274px;
+	width: 278px;
 	margin: 30px;
 	padding: 30px;
 	border-radius: 10px;
